--- a/templates/list.html
+++ b/templates/list.html
@@ -1,8 +1,4 @@
-{% extends 'base_user.html' %}
-
-{% block top_panel %}
-    <a href="/{{ module_name }}/create" class="btn btn-sm btn-success"><i class="fa fa-plus"></i> Добавить</a>
-{% endblock %}
+{% extends 'base.html' %}
 
 {% block content %}
     <section class="scrollable wrapper w-f">
@@ -13,26 +9,17 @@
                         <tr>
                             <th width="20"><input type="checkbox"></th>
                             <th width="20"></th>
-                            
-                            {% for name, _ in table_cols %}
-                                <th>{{ name }}</th>
-                            {% endfor %}
+                            <th>Наименование</th>
+                            <th>Наименование</th>
+                            <th>Наименование</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for i in items %}
                             <tr>
                                 <td><input type="checkbox"></td>
-                                <td><a href="/{{ module_name }}/full/{{ i._id }}" ><i class="fa fa-search-plus"></i></a></td>                                
-                                {% for _, value in table_cols %}
-                                    {% if i[ value ] %}
-                                        <td>
-                                            {{ i[ value ]|safe }}
-                                        </td>
-                                    {% else %}
-                                        <td>-</td>
-                                    {% endif %}
-                                {% endfor %}
+                                <td><a href="/details/{{ i._id }}" ><i class="fa fa-search-plus"></i></a></td>                                
+                                <td>{{ i['naimenovanie'] }}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
@@ -40,20 +27,22 @@
             </div>
         </section>
     </section>
-{% endblock %}
-
-{% block footer %}
+    
     <footer class="footer bg-white b-t">
         <div class="row m-t-sm text-center-xs">
             <div class="col-sm-4">
                 Здесь будет поиск
             </div>
             <div class="col-sm-4 text-center">
-                <small class="text-muted inline m-t-sm m-b-sm">Показано {{ count }} из {{ count }} записей</small>
+                <small class="text-muted inline m-t-sm m-b-sm">Показано {{ count }} из {{ count_all }} записей</small>
             </div>
             <div class="col-sm-4 text-right text-center-xs">                
                 Здесь будет пагинация
             </div>
         </div>
     </footer>
+{% endblock %}
+
+{% block footer %}
+    
 {% endblock %}
